--- a/GoogleBooksApp/app/src/main/res/layout/activity_main.xml
+++ b/GoogleBooksApp/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:queryHint="@string/search_hint"
        style="@style/AppTheme"
 
        ></SearchView>
