--- a/GoogleBooksApp/app/src/main/res/layout/activity_main.xml
+++ b/GoogleBooksApp/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,15 @@
 
 
     </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/tvErrorMessage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/text_network_error"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:gravity="center_horizontal|center_vertical"
+        />
     
 </LinearLayout>
