--- a/GoogleBooksApp/app/src/main/res/layout/book_holder_layout.xml
+++ b/GoogleBooksApp/app/src/main/res/layout/book_holder_layout.xml
@@ -3,21 +3,24 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
-              android:weightSum="8"
     >
 
     <ImageView
         android:id="@+id/imvThumb"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="50dp"
+        android:layout_height="70dp"
+        android:layout_margin="@dimen/book_row_image_margin"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
         />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_marginRight="@dimen/book_row_image_margin"
+        android:layout_marginTop="@dimen/book_row_image_margin"
+        android:layout_marginBottom="@dimen/book_row_image_margin"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="7"
         android:orientation="vertical">
 
         <TextView
@@ -30,7 +33,7 @@
             android:id="@+id/tvAuthor"
             android:text="Author"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
 
     </LinearLayout>
